--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
         android:theme="@style/Theme.VixGPT"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.activity.MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
-            android:label="@string/app_name"
             android:theme="@style/Theme.VixGPT">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
