--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,29 @@
 [versions]
 accompanist-insets = "0.31.5-beta"
-agp = "8.2.0-alpha11"
+agp = "8.2.1"
 kotlin = "1.8.10"
-core-ktx = "1.9.0"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 ktor-client-okhttp = "2.3.2"
-lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.2"
-compose-bom = "2023.03.00"
+lifecycle-runtime-ktx = "2.6.2"
+activity-compose = "1.8.2"
+compose-bom = "2023.10.01"
 compose-markdown = "0.3.4"
-lottie-compose = "6.0.1"
+lottie-compose = "6.3.0"
 navigation-compose = "2.5.3"
-openai-client = "3.3.1"
-typist = "1.2.1"
-koin = "3.4.5"
-material-icons = "1.4.3"
-room = "2.4.1"
-room-presistence = "1.0.0"
+openai-client = "3.6.2"
+koin = "3.5.3"
+material-icons = "1.5.4"
 ksp = "1.8.10-1.0.9"
+room = "2.6.1"
 
 [libraries]
 accompanist-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "accompanist-insets" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -42,13 +42,8 @@ ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-markdown = { group = "com.github.jeziellago", name = "compose-markdown", version.ref = "compose-markdown" }
-typist = { group = "tech.dev-scion", name = "typist", version.ref = "typist" }
 koin = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 material-icons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-icons" }
-room = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
-room-presistence = { group = "android.arch.persistence.room", name = "compiler", version.ref = "room-presistence" }
-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 
 [plugins]
